--- a/Screencast & Testing Code/testing.html
+++ b/Screencast & Testing Code/testing.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title></title>
-
+    <script src="../Functions_industry/testing.js"></script>
 </head>
 <body>
 
-<script src="wacky.js"></script>
 </body>
 </html>
